<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:ignore="MissingConstraints"
            android:paddingBottom="15dp">
            <TextView
                android:id="@+id/tvTitlle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/h_vagas" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nome_completo"
                android:padding="5dp"
                android:layout_margin="5dp"
                />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no" />

            <CheckBox android:id="@+id/ckRecebeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recebe_email"
                />

            <EditText
                android:id="@+id/etTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/telefone"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no" />

            <Spinner
                android:id="@+id/spOpTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opTel"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                />

            <CheckBox android:id="@+id/ckInserirCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inserir_celular"
                />

            <EditText
                android:id="@+id/etCel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/celular"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:importantForAutofill="no" />

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino"
                    android:layout_weight="1"
                    android:checked="true"
                    android:id="@+id/femininoRd"
                    />
                <RadioButton
                    android:id="@+id/masculinoRd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:layout_weight="1"
                    />
            </RadioGroup>

            <EditText
                android:id="@+id/etDtNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/data_de_nascimento"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

            <Spinner
                android:id="@+id/spEscolaridade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/opEscolaridade"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                />

            <EditText
                android:id="@+id/etAno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/ano_de"
                android:minHeight="48dp"
                android:padding="5dp"
                android:visibility="gone"
                android:layout_margin="5dp"
                android:importantForAutofill="no"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <EditText
                android:id="@+id/etInstituicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/institui_o_de_ensino"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etMonografia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/titulo_de_monografio"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etOrientador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/orientador"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:visibility="gone"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etVaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/vaga_pretendida"
                android:minHeight="48dp"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/salvarBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:padding="5dp"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/limparBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:text="@string/limpar" />

        </LinearLayout>
    </ScrollView>